# pets_accounting_service

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
pets/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
pets/management/commands/: kek.py
pets/migrations/: 0001_initial.py
pets_accounting/: asgi.py  settings.py  urls.py  wsgi.py
